@@ -1,3 +1,11 @@
+Thu Mar  1 19:58:16 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
+
+        * tao/DynamicInterface/AMH_DSI_Response_Handler.h:
+        * tao/DynamicInterface/DII_Reply_Handler.h:
+        * tao/DynamicInterface/DII_Reply_Handler.cpp:
+
+          Added the missing versioned namespace guard.
+
 Thu Mar  1 19:36:47 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>
 
         * tao/DynamicInterface/AMH_DSI_Response_Handler.cpp:
